Updated title and script

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>9th Way Insignia: Secret Agent</title>
+  <title>9th Way Insignia: SYNAPSE</title>
   <style>
     body {
       background-color: #121212;
@@ -104,10 +104,10 @@
         ]
       },
       steve: {
-        text: `Steve Ikirt sits behind a glowing wall of dashboards all showing IPA reports. "Melissa’s AI is feeding off incomplete projects and disorganized calendars... I can get you admin access to SYNAPSE, but it'll cost you your PTO. And maybe your soul."`,
+        text: `Steve Ikirt sits behind a glowing wall of dashboards all showing IPA reports. "Melissa’s AI is feeding off incomplete projects and disorganized calendars... I can get you admin access to SYNAPSE, but I'll need a favor in return. I want you to pretend to be me in future 9th Day Newsletter videos."`,
         img: "steve.png",
         choices: [
-          { text: "Trade your PTO and ethics.", next: "steveDeal" },
+          { text: "Agree to be Steve's doppleganger.", next: "steveDeal" },
           { text: "No deal. Recruit someone else.", next: "intro" }
         ]
       },
